# greedy-rust-mesh

./: .gitignore  Cargo.toml
levels/: demo_terrain_96  generated_level_3
src/: lib.rs  main.rs  mesher.rs
src/data/: level_file.rs  mod.rs  rle.rs
src/misc/: camera.rs  shader.rs
src/rendering/: chunk_renderer.rs  mod.rs
