[package]
name = "binary_greedy_mesher_demo_rs"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
bytemuck = { version = "1", features = ["derive"] }
glam = "0.29"
glow = "0.16"
rayon = "1"

# Window + OpenGL context (pure Rust, no GLFW dependency)
winit = "0.30"
glutin = "0.32"
glutin-winit = "0.5"
raw-window-handle = "0.6"
